feat: get error codes endpoint complited
