# docs/swagger.yaml
@@ -1,4 +1,8 @@
 definitions:
+  clientError.ErrorMessagesType:
+    additionalProperties:
+      type: string
+    type: object
   clientError.ErrorResponse:
     properties:
       error:
@@ -603,6 +607,21 @@ paths:
       summary: Check Username
       tags:
       - Account
+  /assets/error-codes:
+    get:
+      consumes:
+      - application/json
+      description: Get All Error Codes in the system
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/clientError.ErrorMessagesType'
+      summary: Get Error Codes
+      tags:
+      - Assets
   /crypto/currencies:
     get:
       consumes:
